# rocket-async

./: .env  Cargo.toml  Rocket.toml  diesel.toml  get_all.http
migrations/2024-10-12-090721_create_posts/: up.sql
src/: api.rs  db.rs  main.rs  models.rs
