[package]
name = "rocket-async-demo2"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = "2.1.1"
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
